--- a/index.html
+++ b/index.html
@@ -1,4 +1,17 @@
 <!DOCTYPE html>
 <html>
-<h1>hello</h1>
+
+<head>
+
+<title>Page Title</title>
+<link rel="stylesheet" href="styles.css">
+</head>
+
+<body>
+
+<h1>This is a Heading</h1>
+<p>This is a paragraph.</p>
+
+</body>
+
 </html>
