--- a/gallery.html
+++ b/gallery.html
@@ -32,11 +32,8 @@
 
 <body>
 	<nav>
-		<ul>
-			<li><a class="active" href="index.html">Home</a></li>
-			<li><a href="gallery.html">Gallery</a></li>
-		</ul>
+		<a href="gallery.html"></a>
 	</nav>
-	<p>?</p>
+    <p>gallery</p>
 </body>
 </html>
