--- a/gallery.html
+++ b/gallery.html
@@ -31,6 +31,13 @@
 </head>
 
 <body>
-  <p>gallery</p>
+  <nav>
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
+      <li><a class="active" href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li>
+    </ul>
+  </nav>
 </body>
 </html>
