--- a/index.html
+++ b/index.html
@@ -34,10 +34,15 @@
   <nav>
     <ul>
       <li><a class="active" href="index.html">Home</a></li>
+      <li><a href="services.html">Services</a></li>
       <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="contact.html">Contact</a></li> 
     </ul>
   </nav>
 
-  <p>?</p>
+  <section class="first">
+    <h1>Lorem Ipsum</h1>
+    <p>blah blha blha blah blah</p>
+  </section>
 </body>
 </html>
